# resume-generator

./: Pipfile  README.md  config.json.example  config.py  generator.py  pyproject.toml  setup.py
docs/: experience.md
src/: __init__.py  generator.py
