[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-generator"
version = "0.1.0"
authors = [
    { name="Alessandro De La Garza", email="aless.delagarza@gmail.com" },
]
description = "An AI-powered resume generator that creates tailored resumes for job applications"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["resume_generator"] 